# PSXFunkin

./: .gitignore  CMakeLists.txt  COMPILE.md  FORMATS.md  Makefile  Makefile.assets  Makefile.tim  TimFixup.py  funkin.xml  main (1).c  main.c  shit.txt
.github/workflows/: build.yml  linux.yml
character/: bf.c  dad.c  gf.c  gfweeb.c  monster.c  senpai.c  spook.c
iso/characters/bf/: bf.json  bfweeb.json  bfx.json
iso/characters/dad/: dad.json
iso/characters/gf/: gf.json  gfweeb.json  gfx.json
iso/characters/monster/: monster.json  monsterx.json
iso/characters/pico/: pico.json
iso/characters/senpai/: senpai.json
iso/characters/senpaim/: senpaim.json
iso/characters/spook/: spook.json
iso/characters/xmasp/: xmasp.json
iso/dad/: dad.json
iso/font/: boldfont.png.txt
iso/music/: menu.txt  week1a.txt  week1b.txt  week2a.txt  week2b.txt  week3a.txt  week3b.txt  week4a.txt  week4b.txt  week5a.txt  week5b.txt  week6a.txt  week6b.txt
iso/music/gameover/pixel/: gameover-pixel.txt
src/: animation.c  animation.h  audio.h  audio_def.h  character.c  character.h  font.c  gfx.h  io.h  loadscr.c  main.c  mem.h  menu.c  menu.h  pad.h  pause.c  psx.h  save.c  save.h  stage.c  stage.h  stagedef_disc1.h  str.h  timer.h  trans.c
src/character/: bf.c  bfweeb.c  chardef.c  chardef.h  dad.c  gf.c  gfdef.c  gfweeb.c  mom.c  monster.c  pico.c  senpai.c  senpaim.c  speaker.c  spirit.c  spook.c  xmasp.c
src/object/: combo.c  splash.c
src/psx/: audio.c  gfx.c  io.c  str.c  stream.c  stream.h  timer.c
src/stage/: week3.c  week4.c  week5.c  week6.c
tools/: CMakeLists.txt  ass.che  dad.chr  dad.json
tools/funkinchartpak/: funkinchartpak.cpp
tools/funkinchrpak/: funkinchrpak.cpp
tools/funkintimconv/: funkintimconv.c  stb_image.c
tools/funkinvagpak/: funkinvagpak.cpp
tools/xainterleave/: xainterleave.c
